--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
             <p>Actors who played in <strong>Kaze no tani no Naushika (1984)</strong> played also in <span class="Number">343</span> different movies, which is a record.</p>
             <img src="images/kaze.jpg" alt="Kaze no tani no Naushika (1984)">
             <p>Actors who played in <strong>Kidô senshi Gandamu (1981)</strong> played also in very connected movies like <strong>Kaze no tani no Naushika (1984)</strong></p>
-            <p><img src="images/gundam.jpg" alt="Kidô senshi Gandamu (1981)"></p>
+            <img src="images/gundam.jpg" alt="Kidô senshi Gandamu (1981)">
             
             <h3>Attributes</h3>
             <p>The science fiction genre has experienced the main gain in popularity in the beginning of <span class="Number">2000th</span>, when the technology for movie production evolutionized, and it goes through the peak right now.</p>
