--- a/index.html
+++ b/index.html
@@ -284,9 +284,10 @@
             <p>The main discoveries in this part of solution refer entirely to the <strong>science fiction</strong> genre. The statistics are based on data provided by IMDB. For details see the particular section in Explainer Notebook.</p>
             <p><span class="Number">172,650</span> actors played in <span class="Number">13,989</span> movies.</p>
             <p>The biggest cast has movie <strong>Angry Video Game Nerd: The Movie (2014)</strong> with <span class="Number">448</span> actors. Here, IMDB lists all the normally uncredited extras in the cast.</p>
-            <img src="images/angry.jpg" alt="Angry Video Game Nerd: The Movie (2014)">
+            
+            <p><img src="images/angry.jpg" alt="Angry Video Game Nerd: The Movie (2014)"></p>
             <p>Actor <strong>Kōichi Yamadera (1961)</strong> played in <span class="Number">48</span> science fiction films.</p>
-            <img src="images/Yamadera.png" alt="Kōichi Yamadera (1961)">
+            <p><img src="images/Yamadera.png" alt="Kōichi Yamadera (1961)"></p>
             <p>An actor acts in only <span class="Number">1.2</span> movies on average, and vice versa.</p>
             <p><span class="Number">82%</span> of movies and actors are connected, meaning if you get friends with an well-known actor, through a chain of actor-to-actor relationships you may become friends with <span class="Number">82%</span> of all actors on the planet.</p>
             <p>Probability that a particular actor plays in a particular movie is <span class="Number">0.0014%</span></p>
@@ -294,7 +295,7 @@
             <p>Probability that a movie hires two random actors is <span class="Number">0.034%</span></p>
             <p>An actor knows <span class="Number">59</span> actors on average.</p>
             <p><strong>Stan Lee (1922)</strong> knows <span class="Number">3,052</span> actors in total.</p>
-            <img src="images/stanlee.jpg" alt="Stan Lee (1922)">
+            <p><img src="images/stanlee.jpg" alt="Stan Lee (1922)"></p>
             <p>A movie is connected through an actor to <span class="Number">18</span> movies on average.</p>
             <p>Two random actors (or movies) are reached in a maximum of <span class="Number">14</span> steps.</p>
             <p>Degrees of co-stardom network follow the power law distribution, meaning the most common number of movies an actor plays is <span class="Number">1</span>, while the most common number of actors a movie hires is <span class="Number">2</span></p>
@@ -306,11 +307,11 @@
             <hr>
             <h3>Centrality</h3>
             <p>If you want to get friends with the most actors on Earth, first become friends with the cast of <strong>Iron Man Three (2013)</strong>, as it is the most central hub in the co-stardom network.</p>
-            <img src="images/ironman3.jpg" alt="Iron Man Three (2013)">
+            <p><img src="images/ironman3.jpg" alt="Iron Man Three (2013)"></p>
             <p>Actors who played in <strong>Kaze no tani no Naushika (1984)</strong> played also in <span class="Number">343</span> different movies, which is a record.</p>
-            <img src="images/kaze.jpg" alt="Kaze no tani no Naushika (1984)">
+            <p><img src="images/kaze.jpg" alt="Kaze no tani no Naushika (1984)"></p>
             <p>Actors who played in <strong>Kidô senshi Gandamu (1981)</strong> played also in very connected movies like <strong>Kaze no tani no Naushika (1984)</strong></p>
-            <img src="images/gundam.jpg" alt="Kidô senshi Gandamu (1981)">
+            <p><img src="images/gundam.jpg" alt="Kidô senshi Gandamu (1981)"></p>
             <hr>
             <h3>Attributes</h3>
             <p>The science fiction genre has experienced the main gain in popularity in the beginning of <span class="Number">2000th</span>, when the technology for movie production evolutionized, and it goes through the peak right now.</p>
