--- a/index.html
+++ b/index.html
@@ -1,31 +1,31 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Seba-recver by polakowo</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-dark.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
+<head>
+	<meta charset="utf-8">
+	<meta content="chrome=1" http-equiv="X-UA-Compatible">
+	<title>OscaRobber by polakowo</title>
+	<link href="stylesheets/styles.css" rel="stylesheet">
+	<link href="stylesheets/github-dark.css" rel="stylesheet">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
+	</script>
+	<script src="javascripts/respond.js">
+	</script><!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <!--[if lt IE 8]>
+	<!--[if lt IE 8]>
     <link rel="stylesheet" href="stylesheets/ie.css">
     <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
-  </head>
-  <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/polakowo/seba-recver">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/polakowo/seba-recver/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/polakowo/seba-recver/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
-        </nav>
-      </div><!-- end header -->
+	<meta content="width=device-width, initial-scale=1, user-scalable=no" name="viewport">
+</head>
+<body>
+	<div id="header">
+		<nav>
+			<li class="fork"><a href="https://github.com/polakowo/oscarobber">View On GitHub</a></li>
+			<li class="downloads">\<a href="https://github.com/polakowo/oscarobber/zipball/master">ZIP</a></li>
+			<li class="downloads"><a href="https://github.com/polakowo/oscarobber/tarball/master">TAR</a></li>
+			<li class="title">DOWNLOADS</li>
+		</nav>
+	</div><!-- end header -->
 	<div class="wrapper">
 		<section>
 			<div id="title">
