--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 	<div id="header">
 		<nav>
 			<li class="fork"><a href="https://github.com/polakowo/oscarobber">View On GitHub</a></li>
-			<li class="downloads">\<a href="https://github.com/polakowo/oscarobber/zipball/master">ZIP</a></li>
-			<li class="downloads"><a href="https://github.com/polakowo/oscarobber/tarball/master">TAR</a></li>
+			<li class="downloads"><a href="https://github.com/polakowo/oscarobber/zipball/master">ZIP</a></li>
 			<li class="title">DOWNLOADS</li>
 		</nav>
 	</div><!-- end header -->
