--- a/index.html
+++ b/index.html
@@ -282,6 +282,8 @@
 			<p>The most movies are low-budget movies. The more budget the movie has, the more money it spends on cast and crew, and the more profitable actors it hires, which also play in many other pictures.</p>
 			<p>The most actors of sci-fi films were born from <span class="Number">1950</span> to <span class="Number">1980</span>. Actors who were born in later years are younger and therefore less wanted as more experienced actors. We also see a trend that the science fiction becomes more and more popular and many new actors join this trend.</p>
 			<p>Height attribute, in contrast, follows the normal (Gaussian) distribution, and isn't correlated with any other attribute.</p>
+			<div id="left"><iframe style="max-height: 300px" width="100%" frameborder="0" scrolling="no" src="//plot.ly/~polakowo/4.embed"></iframe></div>
+			<div id="right"><iframe style="max-height: 300px" width="100%" frameborder="0" scrolling="no" src="//plot.ly/~polakowo/6.embed"></iframe></div>
 		</section>
 	</div><!--[if !IE]><script>fixScale(document);</script><![endif]-->
 </body>
