--- a/index.html
+++ b/index.html
@@ -262,11 +262,7 @@
 			<p>A movie is connected through an actor to <span class="Number">18</span> movies on average.</p>
 			<p>Two random actors (or movies) are reached in a maximum of <span class="Number">14</span> steps.</p>
 			<p>Degrees of co-stardom network follow the power law distribution, meaning the most common number of movies an actor plays is <span class="Number">1</span>, while the most common number of actors a movie hires is <span class="Number">2</span></p>
-			<div>
-				<p><a href="https://plot.ly/~polakowo/1/" style="display: block; text-align: center;" target="_blank" title=""><img alt="" height="300px" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" src="https://plot.ly/~polakowo/1.png" style="max-width: 100%;width: 600px;max-height: 300px;height: 300px" width="600px"></a></p>
-				<script async data-plotly="polakowo:1" src="https://plot.ly/embed.js">
-				</script>
-			</div>
+			<iframe height="300px" width="100%" frameborder="0" scrolling="no" src="//plot.ly/~polakowo/1.embed?share_key=kpWfHA77vruWsAH1txeIpI"></iframe>
 			<p>Friendship paradox is true: the most actors know fewer actors than those know on average.</p>
 			<h3>Centrality</h3>
 			<p>If you want to get friends with the most actors on Earth, first become friends with the cast of <strong>Iron Man Three (2013)</strong>, as it is the most central hub in the co-stardom network.</p>
