--- a/index.html
+++ b/index.html
@@ -273,13 +273,20 @@
 			<p><img alt="Kidô senshi Gandamu (1981)" src="images/gundam.jpg"></p>
 			<h3>Attributes</h3>
 			<p>The science fiction genre has experienced the main gain in popularity in the beginning of <span class="Number">2000th</span>, when the technology for movie production evolutionized, and it goes through the peak right now.</p>
+			<iframe height="300px" width="100%" frameborder="0" scrolling="no" src="//plot.ly/~polakowo/4.embed"></iframe>
 			<p>The most common runtimes are around <span class="Number">10-30</span> min and <span class="Number">80-120</span> min.</p>
-			<p>The most numbers of votes are low. But some movies have millions of them.</p>
+			<iframe height="300px" width="100%" frameborder="0" scrolling="no" src="//plot.ly/~polakowo/6.embed"></iframe>
 			<p>The most movies are low-budget movies. The more budget the movie has, the more money it spends on cast and crew, and the more profitable actors it hires, which also play in many other pictures.</p>
+			<iframe height="300px" width="100%" frameborder="0" scrolling="no" src="//plot.ly/~polakowo/10.embed"></iframe>
+			<p>There is a positive correlation between budget and gross, which is not surprising. 
+			<iframe height="300px" width="100%" frameborder="0" scrolling="no" src="//plot.ly/~polakowo/14.embed"></iframe>
+			
 			<p>The most actors of sci-fi films were born from <span class="Number">1950</span> to <span class="Number">1980</span>. Actors who were born in later years are younger and therefore less wanted as more experienced actors. We also see a trend that the science fiction becomes more and more popular and many new actors join this trend.</p>
 			<p>Height attribute, in contrast, follows the normal (Gaussian) distribution, and isn't correlated with any other attribute.</p>
-			<iframe height="300px" width="100%" frameborder="0" scrolling="no" src="//plot.ly/~polakowo/4.embed"></iframe>
-			<iframe height="300px" width="100%" frameborder="0" scrolling="no" src="//plot.ly/~polakowo/6.embed"></iframe>
+			
+			
+			
+			<iframe height="300px" width="100%" frameborder="0" scrolling="no" src="//plot.ly/~polakowo/12.embed"></iframe>
 		</section>
 	</div><!--[if !IE]><script>fixScale(document);</script><![endif]-->
 </body>
