--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 			<p>A movie is connected through an actor to <span class="Number">18</span> movies on average.</p>
 			<p>Two random actors (or movies) are reached in a maximum of <span class="Number">14</span> steps.</p>
 			<p>Degrees of co-stardom network follow the power law distribution, meaning the most common number of movies an actor plays is <span class="Number">1</span>, while the most common number of actors a movie hires is <span class="Number">2</span></p>
-			<iframe height="300px" width="100%" frameborder="0" scrolling="no" src="//plot.ly/~polakowo/1.embed?share_key=kpWfHA77vruWsAH1txeIpI"></iframe>
+			<p><iframe height="300px" width="100%" frameborder="0" scrolling="no" src="//plot.ly/~polakowo/1.embed?share_key=kpWfHA77vruWsAH1txeIpI"></iframe></p>
 			<p>Friendship paradox is true: the most actors know fewer actors than those know on average.</p>
 			<h3>Centrality</h3>
 			<p>If you want to get friends with the most actors on Earth, first become friends with the cast of <strong>Iron Man Three (2013)</strong>, as it is the most central hub in the co-stardom network.</p>
@@ -273,13 +273,13 @@
 			<p><img alt="Kidô senshi Gandamu (1981)" src="images/gundam.jpg"></p>
 			<h3>Attributes</h3>
 			<p>The science fiction genre has experienced the main gain in popularity in the beginning of <span class="Number">2000th</span>, when the technology for movie production evolutionized, and it goes through the peak right now.</p>
-			<iframe height="300px" width="100%" frameborder="0" scrolling="no" src="//plot.ly/~polakowo/4.embed"></iframe>
+			<p><iframe height="300px" width="100%" frameborder="0" scrolling="no" src="//plot.ly/~polakowo/4.embed"></iframe></p>
 			<p>The most common runtimes are around <span class="Number">10-30</span> min and <span class="Number">80-120</span> min.</p>
-			<iframe height="300px" width="100%" frameborder="0" scrolling="no" src="//plot.ly/~polakowo/6.embed"></iframe>
+			<p><iframe height="300px" width="100%" frameborder="0" scrolling="no" src="//plot.ly/~polakowo/6.embed"></iframe></p>
 			<p>The most movies are low-budget movies. The more budget the movie has, the more money it spends on cast and crew, and the more profitable actors it hires, which also play in many other pictures.</p>
-			<iframe height="300px" width="100%" frameborder="0" scrolling="no" src="//plot.ly/~polakowo/10.embed"></iframe>
+			<p><iframe height="300px" width="100%" frameborder="0" scrolling="no" src="//plot.ly/~polakowo/10.embed"></iframe></p>
 			<p>There is a positive correlation between budget and gross, which is not surprising. 
-			<iframe height="300px" width="100%" frameborder="0" scrolling="no" src="//plot.ly/~polakowo/14.embed"></iframe>
+			<p><iframe height="300px" width="100%" frameborder="0" scrolling="no" src="//plot.ly/~polakowo/14.embed"></iframe></p>
 			
 			<p>The most actors of sci-fi films were born from <span class="Number">1950</span> to <span class="Number">1980</span>. Actors who were born in later years are younger and therefore less wanted as more experienced actors. We also see a trend that the science fiction becomes more and more popular and many new actors join this trend.</p>
 			<p>Height attribute, in contrast, follows the normal (Gaussian) distribution, and isn't correlated with any other attribute.</p>
