--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 			<p>Actors of similar age tend to play in movies. This seems to be well reasoned: there are movies where teens play the central role, movies with young adults, and finally adults.</p>
 			<p>Actors who were born in same country tend to act together.</p>
 			<p>Well-known actors tend to act with other well-known actors.</p>
-			<p>Height hasn't any impact on decisions of companies to hire somebody or not.</p>
+			<p>Height has no impact on decisions of companies to hire somebody or not.</p>
 		</section>
 	</div><!--[if !IE]><script>fixScale(document);</script><![endif]-->
 </body>
