--- a/index.html
+++ b/index.html
@@ -294,6 +294,67 @@
 			<p><iframe height="300px" width="100%" frameborder="0" scrolling="no" src="//plot.ly/~polakowo/18.embed"></iframe></p>
 			
 			<h3>Assortativity</h3>
+			<table>
+				<thead>
+					<tr>
+						<th>Assortativity</th>
+						<th>Attribute</th>
+						<th>Coefficient</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<th>Numeric</th>
+						<th>Release year</th>
+						<th>0.81</th>
+					</tr>
+					<tr>
+						<th>Attribute</th>
+						<th>Language</th>
+						<th>0.67</th>
+					</tr>
+					<tr>
+						<th>Attribute</th>
+						<th>Production country</th>
+						<th>0.66</th>
+					</tr>
+					<tr>
+						<th>Degree</th>
+						<th></th>
+						<th>0.33</th>
+					</tr>
+					<tr>
+						<th>Numeric</th>
+						<th>Budget</th>
+						<th>0.28</th>
+					</tr>
+					<tr>
+						<th>Numeric</th>
+						<th>Runtime</th>
+						<th>0.22</th>
+					</tr>
+					<tr>
+						<th>Numeric</th>
+						<th>Votes</th>
+						<th>0.20</th>
+					</tr>
+					<tr>
+						<th>Numeric</th>
+						<th>Gross</th>
+						<th>0.12</th>
+					</tr>
+					<tr>
+						<th>Attribute</th>
+						<th>Production company</th>
+						<th>0.06</th>
+					</tr>
+					<tr>
+						<th>Attribute</th>
+						<th>Director</th>
+						<th>0.04</th>
+					</tr>
+				</tbody>
+			</table>
 			<p>Actors tend to play in movies which are released within a couple of years.</p>
 			<p>Actors act preferentially in movies where the same language is spoken.</p>
 			<p>Actors tend to act in movies produced in the same country.</p>
