--- a/index.html
+++ b/index.html
@@ -295,63 +295,63 @@
 			
 			<h3>Assortativity</h3>
 			<table>
-				<thead>
+				<tdead>
 					<tr>
-						<th>Assortativity</th>
-						<th>Attribute</th>
-						<th>Coefficient</th>
+						<td>Assortativity</td>
+						<td>Attribute</td>
+						<td>Coefficient</td>
 					</tr>
-				</thead>
+				</tdead>
 				<tbody>
 					<tr>
-						<th>Numeric</th>
-						<th>Release year</th>
-						<th>0.81</th>
+						<td>Numeric</td>
+						<td>Release year</td>
+						<td>0.81</td>
 					</tr>
 					<tr>
-						<th>Attribute</th>
-						<th>Language</th>
-						<th>0.67</th>
+						<td>Attribute</td>
+						<td>Language</td>
+						<td>0.67</td>
 					</tr>
 					<tr>
-						<th>Attribute</th>
-						<th>Production country</th>
-						<th>0.66</th>
+						<td>Attribute</td>
+						<td>Production country</td>
+						<td>0.66</td>
 					</tr>
 					<tr>
-						<th>Degree</th>
-						<th></th>
-						<th>0.33</th>
+						<td>Degree</td>
+						<td></td>
+						<td>0.33</td>
 					</tr>
 					<tr>
-						<th>Numeric</th>
-						<th>Budget</th>
-						<th>0.28</th>
+						<td>Numeric</td>
+						<td>Budget</td>
+						<td>0.28</td>
 					</tr>
 					<tr>
-						<th>Numeric</th>
-						<th>Runtime</th>
-						<th>0.22</th>
+						<td>Numeric</td>
+						<td>Runtime</td>
+						<td>0.22</td>
 					</tr>
 					<tr>
-						<th>Numeric</th>
-						<th>Votes</th>
-						<th>0.20</th>
+						<td>Numeric</td>
+						<td>Votes</td>
+						<td>0.20</td>
 					</tr>
 					<tr>
-						<th>Numeric</th>
-						<th>Gross</th>
-						<th>0.12</th>
+						<td>Numeric</td>
+						<td>Gross</td>
+						<td>0.12</td>
 					</tr>
 					<tr>
-						<th>Attribute</th>
-						<th>Production company</th>
-						<th>0.06</th>
+						<td>Attribute</td>
+						<td>Production company</td>
+						<td>0.06</td>
 					</tr>
 					<tr>
-						<th>Attribute</th>
-						<th>Director</th>
-						<th>0.04</th>
+						<td>Attribute</td>
+						<td>Director</td>
+						<td>0.04</td>
 					</tr>
 				</tbody>
 			</table>
