--- a/index.html
+++ b/index.html
@@ -295,13 +295,13 @@
 			
 			<h3>Assortativity</h3>
 			<table>
-				<tdead>
+				<thead>
 					<tr>
-						<td>Assortativity</td>
-						<td>Attribute</td>
-						<td>Coefficient</td>
+						<th>Assortativity</th>
+						<th>Attribute</th>
+						<th>Coefficient</th>
 					</tr>
-				</tdead>
+				</thead>
 				<tbody>
 					<tr>
 						<td>Numeric</td>
