--- a/index.html
+++ b/index.html
@@ -319,8 +319,8 @@
 						<td>0.66</td>
 					</tr>
 					<tr>
+						<td>Numeric</td>
 						<td>Degree</td>
-						<td></td>
 						<td>0.33</td>
 					</tr>
 					<tr>
