--- a/index.html
+++ b/index.html
@@ -361,6 +361,37 @@
 			<p>The most profitable actors act in the most expensive movies. But before they got very popular, they act in low-budget movies first.</p>
 			<p>Actors tend to act both in short and long movies.</p>
 			<p>Actors show no preference towards some particular production company or director.</p>
+			<table>
+				<thead>
+					<tr>
+						<th>Assortativity</th>
+						<th>Attribute</th>
+						<th>Coefficient</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>Numeric</td>
+						<td>Birth year</td>
+						<td>0.74</td>
+					</tr>
+					<tr>
+						<td>Attribute</td>
+						<td>Birth place</td>
+						<td>0.40</td>
+					</tr>
+					<tr>
+						<td>Numeric</td>
+						<td>Degree</td>
+						<td>0.33</td>
+					</tr>
+					<tr>
+						<td>Numeric</td>
+						<td>Height</td>
+						<td>0.02</td>
+					</tr>
+				</tbody>
+			</table>
 			<p>Actors of similar age tend to play in movies. This seems to be well reasoned: there are movies where teens play the central role, movies with young adults, and finally adults.</p>
 			<p>Actors who were born in same country tend to act together.</p>
 			<p>Well-known actors tend to act with other well-known actors.</p>
