--- a/index.html
+++ b/index.html
@@ -294,6 +294,7 @@
 			<p><iframe height="300px" width="100%" frameborder="0" scrolling="no" src="//plot.ly/~polakowo/18.embed"></iframe></p>
 			
 			<h3>Assortativity</h3>
+			<p>Below assortativity towards various movie attributes.</p>
 			<table>
 				<thead>
 					<tr>
@@ -361,6 +362,7 @@
 			<p>The most profitable actors act in the most expensive movies. But before they got very popular, they act in low-budget movies first.</p>
 			<p>Actors tend to act both in short and long movies.</p>
 			<p>Actors show no preference towards some particular production company or director.</p>
+			<p>Below assortativity towards various actor attributes.</p>
 			<table>
 				<thead>
 					<tr>
