--- a/index.html
+++ b/index.html
@@ -356,12 +356,7 @@
 					</tr>
 				</tbody>
 			</table>
-			<p>Actors tend to play in movies which are released within a couple of years.</p>
-			<p>Actors act preferentially in movies where the same language is spoken.</p>
-			<p>Actors tend to act in movies produced in the same country.</p>
-			<p>The most profitable actors act in the most expensive movies. But before they got very popular, they act in low-budget movies first.</p>
-			<p>Actors tend to act both in short and long movies.</p>
-			<p>Actors show no preference towards some particular production company or director.</p>
+			<p>Actors tend to play in movies which are released within a couple of years. Actors act preferentially in movies where the same language is spoken. Actors tend to act in movies produced in the same country. The most profitable actors act in the most expensive movies. But before they got very popular, they act in low-budget movies first. Actors tend to act both in short and long movies. Actors show no preference towards some particular production company or director.</p>
 			<p><strong>Below assortativity towards various actor attributes.</strong></p>
 			<table>
 				<thead>
@@ -394,10 +389,7 @@
 					</tr>
 				</tbody>
 			</table>
-			<p>Actors of similar age tend to play in movies. This seems to be well reasoned: there are movies where teens play the central role, movies with young adults, and finally adults.</p>
-			<p>Actors who were born in same country tend to act together.</p>
-			<p>Well-known actors tend to act with other well-known actors.</p>
-			<p>Height has no impact on decisions of companies to hire somebody or not.</p>
+			<p>Actors of similar age tend to play in movies. This seems to be well reasoned: there are movies where teens play the central role, movies with young adults, and finally adults. Actors who were born in same country tend to act together. Well-known actors tend to act with other well-known actors. Height has no impact on decisions of companies to hire somebody or not.</p>
 		</section>
 	</div><!--[if !IE]><script>fixScale(document);</script><![endif]-->
 </body>
