--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 			<p><iframe height="300px" width="100%" frameborder="0" scrolling="no" src="//plot.ly/~polakowo/18.embed"></iframe></p>
 			
 			<h3>Assortativity</h3>
-			<p>Next interesting aspect of networks to be discovered is assortative mixing. Assortativity is a preference for a network's nodes to attach to others that are similar in some way. By knowing assortativity we can closely approximate the behavior of the network.</p>
+			<p>Next interesting aspect of networks to be discovered is assortative mixing. Assortativity is a preference for a network's nodes to attach to others that are similar in some way. By knowing assortativity we can closely approximate the behavior of the network. The more is the coefficient of assortativity towards an attribute, the more the nodes prefer to attach to other nodes having a similar attribute value.</p>
 			<p><strong>Below assortativity towards various movie attributes.</strong></p>
 			<table>
 				<thead>
