--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 			<p><img alt="Kidô senshi Gandamu (1981)" src="images/gundam.jpg"></p>
 			
 			<h3>Attributes</h3>
-			<p>Now we move on to observe how different attributes (those of movies as well as those of actors) affect the network. This step of analysis helps us to uncover the real structure of the network and how it has grown. We will check the assortativity of nodes in respect of all attributes, but also answer the question whether those attributes build good communities across the network.</p>
+			<p>Now we move on to observe how different attributes (those of movies as well as those of actors) affect the network. This step of analysis helps us to uncover the real structure of the network and how it has grown. We will check the assortativity of nodes in respect to attributes, but also answer whether attributes build good communities across the network.</p>
 			<p>The science fiction genre has experienced the main gain in popularity in the beginning of <span class="Number">2000th</span>, when the technology for movie production evolutionized, and it goes through the peak right now.</p>
 			<p><iframe height="300px" width="100%" frameborder="0" scrolling="no" src="//plot.ly/~polakowo/4.embed"></iframe></p>
 			<p>The most common runtimes are around <span class="Number">10-30</span> min and <span class="Number">80-120</span> min.</p>
