--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 			
 			<h3>Assortativity</h3>
 			<p>Next interesting aspect of networks to be discovered is assortative mixing. Assortativity is a preference for a network's nodes to attach to others that are similar in some way. By knowing assortativity we can closely approximate the behavior of the network. The more is the coefficient of assortativity towards an attribute, the more the nodes prefer to attach to other nodes having a similar attribute value.</p>
-			<p><strong>Below assortativity towards various movie attributes.</strong></p>
+			<p><strong>Below assortativity towards movie attributes.</strong></p>
 			<table>
 				<thead>
 					<tr>
@@ -367,7 +367,7 @@
 			<p>The most profitable actors act in the most expensive movies. But before they got very popular, they act in low-budget movies first.</p>
 			<p>Actors tend to act both in short and long movies.</p>
 			<p>Actors show no preference towards some particular production company or director.</p>
-			<p><strong>Below assortativity towards various actor attributes.</strong></p>
+			<p><strong>Below assortativity towards actor attributes.</strong></p>
 			<table>
 				<thead>
 					<tr>
