--- a/index.html
+++ b/index.html
@@ -399,10 +399,12 @@
 					</tr>
 				</tbody>
 			</table>
-			<p>Actors of similar age tend to play in movies. This seems to be well reasoned: there are movies where teens play the central role, movies with young adults, and finally adults.</p>
-			<p>Actors who were born in same country tend to act together.</p>
-			<p>Well-known actors tend to act with other well-known actors.</p>
-			<p>Height has no impact on decisions of companies to hire somebody or not.</p>
+			<ul>
+				<li>Actors of similar age tend to play in movies. This seems to be well reasoned: there are movies where teens play the central role, movies with young adults, and finally adults.</li>
+				<li>Actors who were born in same country tend to act together.</li>
+				<li>Well-known actors tend to act with other well-known actors.</li>
+				<li>Height has no impact on decisions of companies to hire somebody or not.</li>
+			</ul>
 		</section>
 	</div><!--[if !IE]><script>fixScale(document);</script><![endif]-->
 </body>
