--- a/index.html
+++ b/index.html
@@ -361,12 +361,14 @@
 					</tr>
 				</tbody>
 			</table>
-			<p>Actors tend to play in movies which are released within a couple of years.</p>
-			<p>Actors act preferentially in movies where the same language is spoken.</p>
-			<p>Actors tend to act in movies produced in the same country.</p>
-			<p>The most profitable actors act in the most expensive movies. But before they got very popular, they act in low-budget movies first.</p>
-			<p>Actors tend to act both in short and long movies.</p>
-			<p>Actors show no preference towards some particular production company or director.</p>
+			<ul>
+				<li>Actors tend to play in movies which are released within a couple of years.</li>
+				<li>Actors act preferentially in movies where the same language is spoken.</li>
+				<li>Actors tend to act in movies produced in the same country.</li>
+				<li>The most profitable actors act in the most expensive movies. But before they got very popular, they act in low-budget movies first.</li>
+				<li>Actors tend to act both in short and long movies.</li>
+				<li>Actors show no preference towards some particular production company or director.</li>
+			</ul>
 			<p><strong>Below assortativity towards actor attributes.</strong></p>
 			<table>
 				<thead>
