--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 			<p><iframe height="300px" width="100%" frameborder="0" scrolling="no" src="//plot.ly/~polakowo/14.embed"></iframe></p>
 			<p>The most actors of sci-fi films were born from <span class="Number">1950</span> to <span class="Number">1980</span>. Actors who were born in later years are younger and therefore less wanted as more experienced actors. We also see a trend that the science fiction becomes more and more popular and many new actors join this trend.</p>
 			<p><iframe height="300px" width="100%" frameborder="0" scrolling="no" src="//plot.ly/~polakowo/16.embed"></iframe></p>
-			<p><li>Height attribute, in contrast, follows the normal (Gaussian) distribution, and isn't correlated with any other attribute.</li></p>
+			<ul><li>Height attribute, in contrast, follows the normal (Gaussian) distribution, and isn't correlated with any other attribute.</li></ul>
 			<p><iframe height="300px" width="100%" frameborder="0" scrolling="no" src="//plot.ly/~polakowo/18.embed"></iframe></p>
 			
 			<h3>Assortativity</h3>
