--- a/index.html
+++ b/index.html
@@ -252,22 +252,28 @@
 			<h2><a aria-hidden="true" class="anchor" href="#network-analysis" id="network-analysis"><span aria-hidden="true" class="octicon octicon-link"></span></a>Network analysis</h2>
 			<h3>Statistics</h3>
 			<p>The main discoveries in this part of solution refer entirely to the <strong>science fiction</strong> genre. The statistics are based on data provided by IMDB. For details see the particular section in Explainer Notebook.</p>
-			<ul><li><span class="Number">172,650</span> actors played in <span class="Number">13,989</span> movies.</li></ul>
-			<ul><li>The biggest cast has movie <strong>Angry Video Game Nerd: The Movie (2014)</strong> with <span class="Number">448</span> actors. Here, IMDB lists all the normally uncredited extras in the cast.</li></ul>
+			<ul>
+				<li><span class="Number">172,650</span> actors played in <span class="Number">13,989</span> movies.</li>
+				<li>The biggest cast has movie <strong>Angry Video Game Nerd: The Movie (2014)</strong> with <span class="Number">448</span> actors. Here, IMDB lists all the normally uncredited extras in the cast.</li>
+			</ul>
 			<p><img alt="Angry Video Game Nerd: The Movie (2014)" src="images/angry.jpg"></p>
 			<ul><li>Actor <strong>Kōichi Yamadera (1961)</strong> played in <span class="Number">48</span> science fiction films.</li></ul>
 			<p><img alt="Kōichi Yamadera (1961)" src="images/Yamadera.png"></p>
-			<ul><li>An actor acts in only <span class="Number">1.2</span> movies on average, and vice versa.</li></ul>
-			<ul><li><span class="Number">82%</span> of movies and actors are connected, meaning if you get friends with an well-known actor, through a chain of actor-to-actor relationships you may become friends with <span class="Number">82%</span> of all actors on the planet.</li></ul>
-			<ul><li>Probability that a particular actor plays in a particular movie is <span class="Number">0.0014%</span></li></ul>
-			<ul><li>Probability that an actor plays in two random movies is <span class="Number">0.13%</span></li></ul>
-			<ul><li>Probability that a movie hires two random actors is <span class="Number">0.034%</span></li></ul>
-			<ul><li>An actor knows <span class="Number">59</span> actors on average.</li></ul>
-			<ul><li><strong>Stan Lee (1922)</strong> knows <span class="Number">3,052</span> actors in total.</li></ul>
+			<ul>
+				<li>An actor acts in only <span class="Number">1.2</span> movies on average, and vice versa.</li>
+				<li><span class="Number">82%</span> of movies and actors are connected, meaning if you get friends with an well-known actor, through a chain of actor-to-actor relationships you may become friends with <span class="Number">82%</span> of all actors on the planet.</li>
+				<li>Probability that a particular actor plays in a particular movie is <span class="Number">0.0014%</span></li>
+				<li>Probability that an actor plays in two random movies is <span class="Number">0.13%</span></li>
+				<li>Probability that a movie hires two random actors is <span class="Number">0.034%</span></li>
+				<li>An actor knows <span class="Number">59</span> actors on average.</li>
+				<li><strong>Stan Lee (1922)</strong> knows <span class="Number">3,052</span> actors in total.</li>
+			</ul>
 			<p><img alt="Stan Lee (1922)" src="images/stanlee.jpg"></p>
-			<ul><li>A movie is connected through an actor to <span class="Number">18</span> movies on average.</li></ul>
-			<ul><li>Two random actors (or movies) are reached in a maximum of <span class="Number">14</span> steps.</li></ul>
-			<ul><li>Degrees of co-stardom network follow the power law distribution, meaning the most common number of movies an actor plays is <span class="Number">1</span>, while the most common number of actors a movie hires is <span class="Number">2</span></li></ul>
+			<ul>
+				<li>A movie is connected through an actor to <span class="Number">18</span> movies on average.</li>
+				<li>Two random actors (or movies) are reached in a maximum of <span class="Number">14</span> steps.</li>
+				<li>Degrees of co-stardom network follow the power law distribution, meaning the most common number of movies an actor plays is <span class="Number">1</span>, while the most common number of actors a movie hires is <span class="Number">2</span></li>
+			</ul>
 			<p><iframe height="300px" width="100%" frameborder="0" scrolling="no" src="//plot.ly/~polakowo/1.embed?share_key=kpWfHA77vruWsAH1txeIpI"></iframe></p>
 			<ul><li>Friendship paradox is true: the most actors know fewer actors than those know on average.</li></ul>
 			
