--- a/index.html
+++ b/index.html
@@ -279,13 +279,13 @@
 			
 			<h3>Centrality</h3>
 			<p><strong>Betweenness and closeness centrality</strong></p>
-			<p>If you want to get friends with the most actors on Earth, first become friends with the cast of <strong>Iron Man Three (2013)</strong>, as it is the most central hub in the co-stardom network.</p>
+			<ul><li>If you want to get friends with the most actors on Earth, first become friends with the cast of <strong>Iron Man Three (2013)</strong>, as it is the most central hub in the co-stardom network.</li></ul>
 			<p><img alt="Iron Man Three (2013)" src="images/ironman3.jpg"></p>
 			<p><strong>Degree centrality</strong></p>
-			<p>Actors who played in <strong>Kaze no tani no Naushika (1984)</strong> played also in <span class="Number">343</span> different movies, which is a record.</p>
+			<ul><li>Actors who played in <strong>Kaze no tani no Naushika (1984)</strong> played also in <span class="Number">343</span> different movies, which is a record.</li></ul>
 			<p><img alt="Kaze no tani no Naushika (1984)" src="images/kaze.jpg"></p>
 			<p><strong>Eigenvector centrality</strong></p>
-			<p>Actors who played in <strong>Kidô senshi Gandamu (1981)</strong> played also in very connected movies like <strong>Kaze no tani no Naushika (1984)</strong></p>
+			<ul><li>Actors who played in <strong>Kidô senshi Gandamu (1981)</strong> played also in very connected movies like <strong>Kaze no tani no Naushika (1984)</strong></li></ul>
 			<p><img alt="Kidô senshi Gandamu (1981)" src="images/gundam.jpg"></p>
 			
 			<h3>Attributes</h3>
