--- a/index.html
+++ b/index.html
@@ -279,8 +279,12 @@
 			
 			<h3>Centrality</h3>
 			<p><strong>Betweenness and closeness centrality</strong></p>
-			<ul><li>If you want to get friends with the most actors on Earth, first become friends with the cast of <strong>Iron Man Three (2013)</strong>, as it is the most central hub in the co-stardom network.</li></ul>
-			<p><img alt="Iron Man Three (2013)" src="images/ironman3.jpg"></p>
+			<ul><li>If you want to get friends with the most actors on Earth, first become friends with the cast of <strong>Iron Man Three (2013)</strong>, <strong>Transformers: Dark of the Moon (2011)</strong>, or <strong>Captain America: Civil War (2016)</strong> as it is the most central hub in the co-stardom network.</li></ul>
+			<p>
+				<img alt="Iron Man Three (2013)" src="images/ironman3.jpg">
+				<img alt="Transformers: Dark of the Moon (2011)" src="images/transformers.jpg">
+				<img alt="Captain America: Civil War (2016)" src="images/captainamerica.jpg">
+			</p>
 			<p><strong>Degree centrality</strong></p>
 			<ul><li>Actors who played in <strong>Kaze no tani no Naushika (1984)</strong> played also in <span class="Number">343</span> different movies, which is a record.</li></ul>
 			<p><img alt="Kaze no tani no Naushika (1984)" src="images/kaze.jpg"></p>
