--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 			
 			<h3>Centrality</h3>
 			<p><strong>Betweenness and closeness centrality</strong></p>
-			<ul><li>If you want to get friends with the most actors on Earth, first become friends with the cast of <strong>Iron Man Three (2013)</strong>, <strong>Transformers: Dark of the Moon (2011)</strong>, or <strong>Captain America: Civil War (2016)</strong> as it is the most central hub in the co-stardom network.</li></ul>
+			<ul><li>If you want to get friends with the most actors on Earth, first become friends with the cast of <strong>Iron Man Three (2013)</strong>, <strong>Transformers: Dark of the Moon (2011)</strong>, or <strong>Captain America: Civil War (2016)</strong> as they are the most central hubs in the co-stardom network of science fiction movies.</li></ul>
 			<p>
 				<img alt="Iron Man Three (2013)" src="images/ironman3.jpg">
 				<img alt="Transformers: Dark of the Moon (2011)" src="images/transformers.jpg">
