--- a/index.html
+++ b/index.html
@@ -417,6 +417,12 @@
 				<li>Well-known actors tend to act with other well-known actors.</li>
 				<li>Height has no impact on decisions of companies to hire somebody or not.</li>
 			</ul>
+			<h3>Communities</h3>
+			<ul>
+				<li>Production countries, release years, and languages are not good communities, that is for example, movies made within USA are interconnected only moderately, while they share many connections with movies made outside of USA. Film industry is an international industry.</li>
+				<li>None of the actor-related attributes build good communities, in particular, for attribute birth place it means that actors act with international actors very commonly, while for attribute birth year it means that teens commonly play with adults, and vice versa.</li>
+				<li>The communities detected by an algorithm are much better than those of attributes.</li>
+			</ul>
 		</section>
 	</div><!--[if !IE]><script>fixScale(document);</script><![endif]-->
 </body>
