--- a/index.html
+++ b/index.html
@@ -424,44 +424,54 @@
 				<thead>
 					<tr>
 						<th>Attribute</th>
+						<th>Communities</th>
 						<th>Modularity</th>
 					</tr>
 				</thead>
 				<tbody>
 					<tr>
 						<td>Production country</td>
+						<td>70</td>
 						<td>0.34</td>
 					</tr>
 					<tr>
 						<td>Release year</td>
+						<td>10</td>
 						<td>0.25</td>
 					</tr>
 					<tr>
 						<td>Language</td>
+						<td>54</td>
 						<td>0.23</td>
 					</tr>
 					<tr>
 						<td>Budget</td>
+						<td>10</td>
 						<td>0.10</td>
 					</tr>
 					<tr>
 						<td>Runtime</td>
+						<td>7</td>
 						<td>0.09</td>
 					</tr>
 					<tr>
 						<td>Production company</td>
+						<td>6265</td>
 						<td>0.06</td>
 					</tr>
 					<tr>
 						<td>Director</td>
+						<td>10409</td>
 						<td>0.04</td>
 					</tr>
 					<tr>
 						<td>Gross</td>
+						<td>8</td>
 						<td>0.02</td>
 					</tr>
 					<tr>
 						<td>Votes</td>
+						<td>9</td>
 						<td>0.02</td>
 					</tr>
 				</tbody>
@@ -472,20 +482,24 @@
 				<thead>
 					<tr>
 						<th>Attribute</th>
+						<th>Communities</th>
 						<th>Modularity</th>
 					</tr>
 				</thead>
 				<tbody>
 					<tr>
 						<td>Birth place</td>
+						<td>205</td>
 						<td>0.24</td>
 					</tr>
 					<tr>
 						<td>Birth year</td>
+						<td>10</td>
 						<td>0.18</td>
 					</tr>
 					<tr>
 						<td>Height</td>
+						<td>5</td>
 						<td>0.01</td>
 					</tr>
 				</tbody>
