--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
 					</tr>
 				</tbody>
 			</table>
-			<p><strong>Hint: Numeric attributes like release year may have a very wide scale of values, which makes performance ugly. We discovered a correlation between maximal value on the scale and the performance: if some values go above ~1000, the algorithm hangs, hence some attributes have been rescaled to [1,10].</strong></p>
+			<p><em>Hint: Numeric attributes like release year may have a very wide scale of values, which makes performance ugly. We discovered a correlation between maximal value on the scale and the performance: if some values go above ~1000, the algorithm hangs, hence some attributes have been rescaled to [1,10].</em></p>
 			<ul><li>Production countries, release years, and languages are not good communities, that is for example, movies made within USA are interconnected only moderately, while they share many connections with movies made outside of USA. Film industry is an international industry.</li></ul>
 			<p><strong>Below modularity of actor attributes.</strong></p>
 			<table>
