--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
 					</tr>
 					<tr>
 						<td>Release year</td>
-						<td>10</td>
+						<td>10 (rescaled)</td>
 						<td>0.25</td>
 					</tr>
 					<tr>
@@ -446,12 +446,12 @@
 					</tr>
 					<tr>
 						<td>Budget</td>
-						<td>10</td>
+						<td>10 (rescaled)</td>
 						<td>0.10</td>
 					</tr>
 					<tr>
 						<td>Runtime</td>
-						<td>7</td>
+						<td>7 (rescaled)</td>
 						<td>0.09</td>
 					</tr>
 					<tr>
@@ -466,12 +466,12 @@
 					</tr>
 					<tr>
 						<td>Gross</td>
-						<td>8</td>
+						<td>8 (rescaled)</td>
 						<td>0.02</td>
 					</tr>
 					<tr>
 						<td>Votes</td>
-						<td>9</td>
+						<td>9 (rescaled)</td>
 						<td>0.02</td>
 					</tr>
 				</tbody>
