--- a/index.html
+++ b/index.html
@@ -419,6 +419,7 @@
 			</ul>
 			
 			<h3>Communities</h3>
+			<p>Next we will see whether attributes are good communities, and will uncover some new.</p>
 			<p><strong>Below modularity of movie attributes.</strong></p>
 			<table>
 				<thead>
@@ -495,12 +496,12 @@
 					</tr>
 					<tr>
 						<td>Birth year</td>
-						<td>10</td>
+						<td>10 (rescaled)</td>
 						<td>0.18</td>
 					</tr>
 					<tr>
 						<td>Height</td>
-						<td>5</td>
+						<td>5 (rescaled)</td>
 						<td>0.01</td>
 					</tr>
 				</tbody>
