--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 			<p><img alt="Kidô senshi Gandamu (1981)" src="images/gundam.jpg"></p>
 			
 			<h3>Attributes</h3>
-			<p>Now we move on to observe how different attributes (those of movies as well as those of actors) affect the network. This step of analysis helps us to uncover the real structure of the network and how it has grown. We will check the assortativity of nodes in respect to attributes, but also answer whether attributes build good communities across the network.</p>
+			<p>Now we move on to observe different attributes (those of movies as well as those of actors). This step of analysis helps us to uncover the real structure of the network and how it has grown. We will check the assortativity of nodes in respect to attributes, but also answer whether attributes build good communities across the network.</p>
 			<ul><li>The science fiction genre has experienced the main gain in popularity in the beginning of <span class="Number">2000th</span>, when the technology for movie production evolutionized, and it goes through the peak right now.</li></ul>
 			<p><iframe height="300px" width="100%" frameborder="0" scrolling="no" src="//plot.ly/~polakowo/4.embed"></iframe></p>
 			<ul><li>The most common runtimes are around <span class="Number">10-30</span> min and <span class="Number">80-120</span> min.</li></ul>
@@ -312,7 +312,7 @@
 			<p><iframe height="300px" width="100%" frameborder="0" scrolling="no" src="//plot.ly/~polakowo/18.embed"></iframe></p>
 			
 			<h3>Assortativity</h3>
-			<p>Next interesting aspect of networks to be discovered is assortative mixing. Assortativity is a preference for a network's nodes to attach to others that are similar in some way. By knowing assortativity we can closely approximate the behavior of the network. The more is the coefficient of assortativity towards an attribute, the more the nodes prefer to attach to other nodes having a similar attribute value.</p>
+			<p>Assortative mixing is a preference for a network's nodes to attach to others that are similar in some way. By knowing assortativity we can closely approximate the behavior of the network. The more is the coefficient of assortativity towards an attribute, the more the nodes prefer to attach to other nodes having a similar attribute value.</p>
 			<p><strong>Below assortativity towards movie attributes.</strong></p>
 			<table>
 				<thead>
@@ -423,7 +423,7 @@
 			</ul>
 			
 			<h3>Communities</h3>
-			<p>Next we will see whether attributes are good communities, and will uncover some new.</p>
+			<p>Next we will see whether attributes are good communities, and will uncover some new.  Networks with high modularity have dense connections between the nodes within modules but sparse connections between nodes in different modules.</p>
 			<p><strong>Below modularity of movie attributes.</strong></p>
 			<table>
 				<thead>
