--- a/index.html
+++ b/index.html
@@ -278,6 +278,9 @@
 			<ul><li>Friendship paradox is true: the most actors know fewer actors than those know on average.</li></ul>
 			
 			<h3>Centrality</h3>
+			<blockquote>
+				<p>In graph theory and network analysis, indicators of centrality identify the most important vertices within a graph</p>
+			</blockquote>
 			<p>We are going to explore the most central nodes according to a few different centrality definitions.</p>
 			<p><strong>Betweenness and closeness centrality</strong></p>
 			<p><em>Betweenness centrality quantifies the number of times a node acts as a bridge along the shortest path between two other nodes. Closeness centrality measures the mean distance from a node to other nodes.</em></p>
@@ -312,7 +315,10 @@
 			<p><iframe height="300px" width="100%" frameborder="0" scrolling="no" src="//plot.ly/~polakowo/18.embed"></iframe></p>
 			
 			<h3>Assortativity</h3>
-			<p>Assortative mixing is a preference for a network's nodes to attach to others that are similar in some way. By knowing assortativity we can closely approximate the behavior of the network. The more is the coefficient of assortativity towards an attribute, the more the nodes prefer to attach to other nodes having a similar attribute value.</p>
+			<blockquote>
+			<p>Assortative mixing is a preference for a network's nodes to attach to others that are similar in some way. The more is the coefficient of assortativity towards an attribute, the more the nodes prefer to attach to other nodes having a similar attribute value.</p>
+			</blockquote>
+			<p>By knowing assortativity we can closely approximate the behavior of the network.</p>
 			<p><strong>Below assortativity towards movie attributes.</strong></p>
 			<table>
 				<thead>
@@ -423,7 +429,10 @@
 			</ul>
 			
 			<h3>Communities</h3>
-			<p>Next we will see whether attributes are good communities, and will uncover some new.  Networks with high modularity have dense connections between the nodes within modules but sparse connections between nodes in different modules.</p>
+			<p>Next we will see whether attributes are good communities, and will uncover some new.<p>
+			<blockquote>
+				<p>Networks with high modularity have dense connections between the nodes within modules but sparse connections between nodes in different modules.</p>
+			</blockquote>
 			<p><strong>Below modularity of movie attributes.</strong></p>
 			<table>
 				<thead>
